--- a/Untitled9.ipynb
+++ b/Untitled9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4c93c866-3227-4458-a04e-6e6aed8c54ab",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "911006f4-9099-489c-904a-798a9b561fdd",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,6 @@
     }
    ],
    "source": [
-    "\n",
     "print(data.shape)"
    ]
   },
@@ -88,7 +87,9 @@
    "id": "42c81298-7786-49e2-ac27-a351b4d19f6d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ciaooo"
+   ]
   },
   {
    "cell_type": "code",
@@ -101,9 +102,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "NovaIMSML",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -115,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
